# winp

./: README.md  build.cmd  pom.xml
native/: CMakeLists.txt  build-all.cmd  build.cmd  winp.cpp
src/main/java/org/jvnet/winp/: CpuArch.java  Native.java
